# mcp-enterprise-standards

./: .env.sample  .gitignore  Dockerfile  README.md  mcp-enterprise-standards.code-workspace  pyproject.toml  setup.md
.devcontainer/: devcontainer.json
assets/: hack.html  mcp-workflow.mmd
src/: naming_convention.md  security_standards.md  server.py  shared_resources.md  system_prompt.md  template_tools.py
src/mcp_enterprise_standards.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: azure-aks.bicep  azure-vm.bicep  azure-webapp.bicep
tests/: test_assess_code.py
