[project]
name = "mcp-enterprise-standards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.3",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "semantic-kernel>=1.32.2",
]


[tool.setuptools]
package-dir = {"" = "src"}
